@@ -158,6 +158,8 @@ operator|.
 name|util
 operator|.
 name|Map
+operator|.
+name|Entry
 import|;
 end_import
 begin_import
@@ -167,8 +169,6 @@ operator|.
 name|util
 operator|.
 name|Map
-operator|.
-name|Entry
 import|;
 end_import
 begin_import
@@ -325,6 +325,19 @@ operator|.
 name|IndexWriterConfig
 operator|.
 name|OpenMode
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|MatchAllDocsQuery
 import|;
 end_import
 begin_import
@@ -4079,6 +4092,33 @@ block|{
 name|ensureOpen
 argument_list|()
 expr_stmt|;
+comment|// LUCENE-6379: Specialize MatchAllDocsQuery
+for|for
+control|(
+name|Query
+name|query
+range|:
+name|queries
+control|)
+block|{
+if|if
+condition|(
+name|query
+operator|.
+name|getClass
+argument_list|()
+operator|==
+name|MatchAllDocsQuery
+operator|.
+name|class
+condition|)
+block|{
+name|deleteAll
+argument_list|()
+expr_stmt|;
+return|return;
+block|}
+block|}
 try|try
 block|{
 if|if
